# course-report-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  build.py  build.spec  docker-compose.yml  main.py  pyproject.toml  start.sh  项目策划书.md
.github/workflows/: docker-build.yml
backend/: app.py  config.py  db.py  paths.py
backend/api/: __init__.py  ai.py  batch_reports.py  classes.py  import_export.py  projects.py  reports.py  settings.py  students.py  templates.py
backend/llm/: __init__.py  base.py
backend/llm/prompts/: __init__.py  code_analysis.py  content_summary.py  evaluation.py  homework.py  knowledge_points.py
backend/llm/providers/: claude.py  deepseek.py  openai_compat.py
backend/models/: __init__.py  batch_report.py  course_record.py  klass.py  student.py
backend/schemas/: __init__.py  ai_generation.py  batch.py  course_record.py  klass.py  project.py  student.py  template.py
backend/services/: __init__.py  ai_chains.py  ai_conversation.py  ai_orchestrator.py  batch_reports.py  classes.py  code_analyzer.py  course_records.py  docx_generator.py  docx_importer.py  pdf_generator.py  pdf_to_image.py  report_renderer.py  students.py  template_manager.py
backend/utils/: logger.py
config/: app.yaml  llm.yaml.example
data/: user_settings.json
frontend/: index.html
frontend/src/: api.js  app.js  router.js
frontend/src/views/: BatchReport.js  Classes.js  Dashboard.js  DraftList.js  ReportEditor.js  Settings.js  Students.js  TemplateManager.js
frontend/styles/: app.css
templates/: README.md
templates/academic/: config.json  style.css  template.html
templates/cartoon/: config.json  style.css  template.html
templates/classic/: config.json  style.css  template.html
templates/python/: config.json  style.css
templates/少儿卡通_副本/: config.json  style.css  template.html
templates/科技前沿/: config.json  style.css  template.html
tests/: conftest.py
tests/integration/: test_ai_api.py  test_classes_api.py  test_import_api.py  test_projects_api.py  test_reports_api.py  test_students_api.py  test_word_api.py
tests/unit/: test_ai.py  test_code_analyzer.py  test_config.py  test_course_record.py  test_docx_generator.py  test_docx_importer.py  test_import_parser.py  test_layout_merge.py  test_logger.py  test_orchestrator.py  test_pdf_generator.py  test_report_renderer.py  test_schemas.py  test_template_manager.py
