[project]
name = "course-report-generator"
version = "0.1.0"
description = "少儿编程课程报告自动生成工具 - 选择程序文件夹，AI 生成内容，按 4 页 A4 模板输出 PDF 报告"
requires-python = ">=3.11"
authors = [
    { name = "Course Report Generator Team" }
]
readme = "README.md"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.138.1",
    "greenlet>=3.5.3",
    "jinja2>=3.1.6",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# === pytest 配置 ===
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:jinja2.*",
    "ignore::ResourceWarning",  # RotatingFileHandler 句柄在 GC 时被警告
]

# === coverage 配置 ===
[tool.coverage.run]
source = ["backend"]
branch = true
omit = [
    "backend/__init__.py",
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

# === ruff 配置 ===
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests

# === 版本管理 ===
# 大版本号对应策划书中的阶段里程碑
# v0.1.0 - P0 准备：项目脚手架
# v0.2.0 - P1 学生/班级管理
# v0.3.0 - P2 代码分析
# v0.4.0 - P3 AI 集成
# v0.5.0 - P4 报告编辑 + 草稿
# v0.6.0 - P5 模板 + PDF
# v0.7.0 - P6 Word 导入导出
# v0.8.0 - P7 批量 + 历史
# v1.0.0 - P8 测试与发布
